<resources>
    <string name="app_name" translatable="false">Password Manager</string>
    <string name="app_version" translatable="false">Password Manager v0.3.3</string>
    <string name="settings_security">Settings</string>
    <string name="settings_display">Display</string>
    <string name="settings_info">Informations</string>
    <string name="settings_change_password_summary">Change master password</string>
    <string name="settings_change_password">Change password</string>
    <string name="settings_default_password_size">Password size</string>
    <string name="settings_default_password_size_summary">Default size of generated passwords</string>
    <string name="settings_days_before_password_reminder">Safety reminder</string>
    <string name="settings_day_before_password_reminder_summary">Days before reminder to change password</string>
    <string name="settings_char_per_screen">Number of characters</string>
    <string name="settings_char_per_screen_summary">Number of characters per display of password parts</string>
    <string name="settings_small_account_layout">Reduced display</string>
    <string name="settings_feedback">Feedback</string>
    <string name="settings_feedback_summary">Suggest an improvement or report a bug</string>
    <string name="settings_about">About</string>
    <string name="nav_account">Accounts</string>
    <string name="nav_security">Security</string>
    <string name="nav_settings">Settings</string>
    <string name="context_edit">Edit</string>
    <string name="context_delete">Delete</string>
    <string name="search_name">Search</string>
    <string name="search_hint">Search...</string>
    <string name="auth_wall_text_info">Enter your master password</string>
    <string name="auth_wall_password_hint">Password</string>
    <string name="change_password_text_info">Please fill the following fields</string>
    <string name="change_password_current_password_hint">Current password</string>
    <string name="change_password_new_password_hint">New password</string>
    <string name="change_password_confirm_password_hint">Confirm new password</string>
    <string name="edit_account_password_text_info">Change your account password</string>
    <string name="account_password_length">Length</string>
    <string name="password">Password</string>
    <string name="account_generate">Generate</string>
    <string name="account_save">Save</string>
    <string name="new_account_text_info">Please fill the following fields</string>
    <string name="new_account_service_hint">Service name</string>
    <string name="new_account_login_hint">Login</string>
    <string name="first_log_text_info">Create a password</string>
    <string name="first_log_password_hint">Password</string>
    <string name="first_log_confirm_password_hint">Confirm password</string>
    <string name="manager_add_account">Add</string>
    <string name="account_service">Service</string>
    <string name="account_login">Login</string>
    <string name="account_last_edit">Last edit</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="security_passwords_to_change">Passwords to change</string>
    <string name="security_nothing_to_do">Nothing to change yet!</string>
    <string name="datetime_format">MM/dd/yyyy HH:mm:ss</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="snackbar_password_copied">Password copied!</string>
    <string name="dialog_delete_account">Account deletion</string>
    <string name="dialog_delete_text_info">Do you really want to delete this account ?</string>
    <string name="dialog_delete">Delete</string>
    <string name="snackbar_account_deleted">Account deleted</string>
    <string name="wrong_password">Wrong password.</string>
    <string name="management_title">Account management</string>
    <string name="change_password_title">Password change</string>
    <string name="passwords_different">Passwords are different!</string>
    <string name="rewrite_password">Please rewrite the new password</string>
    <string name="edit_account_title">Account modification</string>
    <string name="password_already_used">Password already used!</string>
    <string name="ask_write_password">Please write a password</string>
    <string name="password_cant_be_empty">Password cannot be empty!</string>
    <string name="new_account_title">New account</string>
    <string name="account_service_empty">Enter a service name</string>
    <string name="account_login_empty">Enter a login</string>
    <string name="account_password_empty">Enter a password</string>
    <string name="account_already_exists">This account already exists!</string>
    <string name="security_title">Security dashboard</string>
    <string name="settings_title">Settings</string>
    <string name="close">Close</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="password_already_found_text_info">The chosen password has already been found %1$s times. Do you really want to use it ?</string>
    <string name="alert_security">Security alert</string>
    <string name="no_internet">No internet connection</string>
    <string name="password_not_checked">The chosen password could not be verified because you have no internet connection. Do you really want to use it ?</string>
</resources>