<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:key="security"
        app:title="@string/settings_security">

        <Preference
            app:key="change_password"
            app:summary="@string/settings_change_password_summary"
            app:title="@string/settings_change_password" />

        <SeekBarPreference
            android:max="32"
            app:defaultValue="16"
            app:key="default_password_size"
            app:min="8"
            app:showSeekBarValue="true"
            app:summary="@string/settings_default_password_size_summary"
            app:title="@string/settings_default_password_size" />

        <SeekBarPreference
            android:max="365"
            app:defaultValue="90"
            app:key="days_before_password_reminder"
            app:min="7"
            app:showSeekBarValue="true"
            app:summary="@string/settings_day_before_password_reminder_summary"
            app:title="@string/settings_days_before_password_reminder" />

        <SeekBarPreference
            android:max="16"
            app:defaultValue="8"
            app:key="char_per_screen"
            app:min="4"
            app:showSeekBarValue="true"
            app:summary="@string/settings_char_per_screen_summary"
            app:title="@string/settings_char_per_screen" />

    </PreferenceCategory>

    <PreferenceCategory
        app:key="display"
        app:title="@string/settings_display">

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="small_account_layout"
            app:title="@string/settings_small_account_layout" />

    </PreferenceCategory>

    <PreferenceCategory
        app:key="others"
        app:title="@string/settings_info">

        <Preference
            app:key="feedback"
            app:summary="@string/settings_feedback_summary"
            app:title="@string/settings_feedback" />

        <Preference
            app:key="about"
            app:selectable="false"
            app:summary="@string/app_version"
            app:title="@string/settings_about" />

    </PreferenceCategory>


</PreferenceScreen>
